package com.moeda_estudantil.backend.enums;

public enum TipoTransacao {
    ENTRADA,
    SAIDA
}