package com.moeda_estudantil.backend.enums;

public enum TipoUsuario {
    ALUNO,
    PROFESSOR,
    EMPRESA_PARCEIRA,
    ADMIN
}